Added social links to the footer
Footer was missing social links, added them.

--- a/index.html
+++ b/index.html
@@ -439,7 +439,8 @@
         <div class="container">
             <h3>Agrim Jain</h3>
             <div class="social-links">
-
+            <a href="https://www.linkedin.com/in/agrim-jain-b2139620a/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://github.com/Agrim2411" class="github" target="_blank"><i class="bx bxl-github"></i></a>
                 <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
             </div>
